@@ -1,6 +1,7 @@
 Revision history for DBIx-Class-Validation-Structure
 
 {{$NEXT}}
+        - Made exception for primary keys from unique constraints test when validating result from storage.
 
 0.09  2014-08-04 14:50:40 CDT
         - Changed Uniqueness validation to follow combined unique constraints
